force-app/main/default/objects/Project_Team__c/Project_Team__c.object-meta.xml
<CustomObject>
    <description>This is child to Project where users can select a User and can assign a Role as well</description>
    <label>Project Team</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Project Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>