force-app/main/default/objects/Project_Team__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check the checkbox if selected user is primary.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>