force-app/main/default/objects/Project_Team__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Lookup to Project to select Project</description>
    <inlineHelpText>Select Project Name Here</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Project_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>