force-app/main/default/objects/Project_Team__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <inlineHelpText>Select the role of this user.</inlineHelpText>
    <label>Project Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Executive</fullName>
            </value>
            <value>
                <fullName>Service Desk Agent</fullName>
            </value>
            <value>
                <fullName>Sr. Project Executive</fullName>
            </value>
            <value>
                <fullName>Service Delivery Executive</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>SDM</fullName>
            </value>
            <value>
                <fullName>Project Management Head</fullName>
            </value>
            <value>
                <fullName>Regional Head Service Delivery</fullName>
            </value>
            <value>
                <fullName>Global delivery Director</fullName>
            </value>
            <value>
                <fullName>Global OPS Head</fullName>
            </value>
            <value>
                <fullName>Resource may have Engineers(Contractor-Dispatch, Contractor-FTE, FTE)</fullName>
            </value>
            <value>
                <fullName>Service Desk Lead</fullName>
            </value>
            <value>
                <fullName>Service Desk Manager</fullName>
            </value>
            <value>
                <fullName>Service Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Account Director</fullName>
            </value>
            <value>
                <fullName>Client SDM</fullName>
            </value>
            <value>
                <fullName>TIG SDM</fullName>
            </value>
            <value>
                <fullName>RDH</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Team</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>AR Execuive</fullName>
            </value>
            <value>
                <fullName>AR Sr. Executive</fullName>
            </value>
            <value>
                <fullName>AR Manager</fullName>
            </value>
            <value>
                <fullName>AR Head</fullName>
            </value>
            <value>
                <fullName>AP Executive</fullName>
            </value>
            <value>
                <fullName>AP Sr. Executive</fullName>
            </value>
            <value>
                <fullName>AP Manager</fullName>
            </value>
            <value>
                <fullName>AP Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>