force-app/main/default/objects/Project_Team__c/fields/Shared_User__c.field-meta.xml
<CustomField>
    <fullName>Shared_User__c</fullName>
    <formula>IF(RecordType.Name == &apos;Internal&apos;,  User__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared User</label>
    <type>Text</type>
</CustomField>