force-app/main/default/objects/Project_Team__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>