force-app/main/default/objects/Project_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary__c</columns>
    <columns>Project__c</columns>
    <columns>Project_Role__c</columns>
    <columns>Send_Invoice__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>